@@ -11,21 +11,19 @@ import summon
 
 
 # parameters (feel free to change these here and WHILE the animation is running!)
-rate = 1/100.0
+rate = 1/60.0
 winsize = 300
 maxballsize = 20
-balls = []
-nballs = 500
+nballs = 30
 gravity = [0, -.1]
 bounce = -.9
 
 
 
-win = summon.Window("15_animation")
 
 
-# class for bouncing Ball
 class Ball:
+    """Class for bouncing Ball"""
     def __init__(self, x, y, size, vx, vy):
         self.group = None
         self.x = x
@@ -38,55 +36,38 @@ class Ball:
         self.activate = 0
 
 
-# create balls
-x = winsize / 2
-y = winsize / 2
-
-for i in range(nballs):
-    angle = random.random()
-    vx = 5 * math.cos(angle)
-    vy = 5 * math.sin(angle)
-    size = maxballsize * i/ float(nballs)
-    x = size + (winsize - 2 * size) * random.random()
-    y = size + (winsize - 2 * size) * random.random()
-    
-    balls.append(Ball(x, y, size, vx, vy))
-
-
-
-# draw bounding box
-win.add_group(group(color(1,1,1), shapes.box(0, 0, winsize, winsize, fill=False)))
-
-
-def drawBall(ball):
-    def func():
-        ball.vy *= 3
-        ball.vx *= 3
-        ball.activate = 1
-    
-    val = (ball.vy + 3) / 6
-    
-    
-    if ball.group == None:
-        ball.color = group(color(val, ball.activate, 1))
-    
-        ball.group = win.add_group(
-            translate(ball.x, ball.y,
-                      ball.color,
-                      shapes.regular_polygon(0, 0, 20, ball.size),
-                      hotspot("click", - 2 * ball.size, - 2*ball.size,
-                              2*ball.size, 2*ball.size,
-                              func)))
+    def draw(self):
+        """Method for draw a ball"""
         
-    else:
-        ball.group.set(ball.x, ball.y)
-        ball.color = ball.color.replace_self(group(color(val, ball.activate, 1)))
+        colorval = (self.vy + 3) / 6.0
+        
+        if self.group == None:
+            
+            self.color = group(color(val, self.activate, 1))
+
+            self.group = win.add_group(
+                translate(self.x, self.y,
+                          self.color,
+                          shapes.regular_polygon(0, 0, 20, self.size),
+                          hotspot("click", - 2 * self.size, - 2*self.size,
+                                  2*self.size, 2*self.size,
+                                  self.on_click)))
+
+        else:
+            self.group.set(self.x, self.y)
+            self.color = self.color.replace_self(group(color(colorval, self.activate, 1)))
+
+
+    def on_click(self):
+        """Callback function for when a ball is clicked"""
+        self.vy *= 3
+        self.vx *= 3
+        self.activate = 1
         
 
-last = summon.get_time()
-frames = 0
+def draw_frame():
+    """Draw one frame of the animation"""
 
-def drawFrame():
     global last, frames
     
     frames += 1
@@ -125,10 +106,34 @@ def drawFrame():
         if ball.y > winsize - ball.size:
             ball.vy *= bounce
             ball.y = winsize - ball.size
-    
 
-# begin animation
+
+# frame rate information
+last = summon.get_time()
+frames = 0
+
+# create balls
+x = winsize / 2
+y = winsize / 2
+
+balls = []
+for i in range(nballs):
+    angle = random.random()
+    vx = 5 * math.cos(angle)
+    vy = 5 * math.sin(angle)
+    size = maxballsize * i/ float(nballs)
+    x = size + (winsize - 2 * size) * random.random()
+    y = size + (winsize - 2 * size) * random.random()
+    
+    balls.append(Ball(x, y, size, vx, vy))
+
+
+
+# draw bounding box
+win = summon.Window("15_animation")
+win.add_group(group(color(1,1,1), shapes.box(0, 0, winsize, winsize, fill=False)))
 win.home()
 
-# setup timer to call this function again
-summon.add_timer(drawFrame, interval=rate, window=win)
+
+# setup timer to call the draw frame function
+timer = summon.add_timer(draw_frame, interval=rate, window=win)
